# crazy-eights

./: .gdbinit  .gitignore  Doxyfile  Makefile  Makefile.am  Makefile.bak  README.md  configure.ac
src/: Card.c  Card.h  GameAction.c  GameAction.h  GameState.c  GameState.h  Makefile.am  Player.c  Player.h  crazyeights  crazyeights.c  menuprinters.c  menuprinters.h  serverclient.c  serverclient.h  simplelist.c  simplelist.h
src/structures/: simplelist.c  simplelist.h  stack.c  stack.h
test/: check_GameState.c  check_Player.c
